syntax = "proto3";

package v1.apbv1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/apb;apbv1";

message AnimeTag {
  int64                     ID        = 1;
  string                    tag       = 2;
  google.protobuf.Timestamp createdAt = 3;
}